--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "url": "https://ton-wallet-five.vercel.app",
+  "url": "https://teeest-five.vercel.app/",
   "name": "TON-приложение",
-  "iconUrl": "https://ton-wallet-five.vercel.app/icon.png",
+  "iconUrl": "https://teeest-five.vercel.app/icon.png",
   "description": "Приложение для привязки и работы с TON кошельком",
   "version": "1.0.0",                   
   "manifest_version": 2,                
